kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: harbr-router
  labels:
    name: harbr-router
